--- a/JavaExplanation-main/main.css
+++ b/JavaExplanation-main/main.css
@@ -1,15 +1,15 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-family: "Yusei Magic", sans-serif;
+    font-family: "ヒラギノ丸ゴ ProN", sans-serif;
     color: #454545;
 }
 
 body {
-    color: var(--main-foreground);
+    color: #232323;
     line-height: 1.5;
-    word-wrap: break-word;
     box-sizing: border-box;
+    word-wrap: break-word;
     max-width: 980px;
     margin: 2em auto;
     padding: 0px 30px;
