--- a/main.css
+++ b/main.css
@@ -5,9 +5,29 @@ html {
     color: #454545;
 }
 
+h1 {
+    /*線の種類（二重線）太さ 色*/
+    border-bottom: double 5px #FFC778;
+}
+
+h2 {
+    padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
+    color: #494949;/*文字色*/
+    background: #f4f4f4;/*背景色*/
+    border-left: solid 5px #7db4e6;/*左線*/
+    border-bottom: solid 3px #d7d7d7;/*下線*/
+}
+
+h3 {
+    padding: 0.25em 0.5em;/*上下 左右の余白*/
+    color: #494949;/*文字色*/
+    background: transparent;/*背景透明に*/
+    border-left: solid 5px #7db4e6;/*左線*/
+}
+
 body {
     color: #232323;
-    line-height: 1.5;
+    line-height: 2.0;
     box-sizing: border-box;
     word-wrap: break-word;
     max-width: 980px;
