--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-family: "ヒラギノ丸ゴ ProN", sans-serif;
+    font-family: "Hiragino Maru Gothic ProN W4","ヒラギノ丸ゴ ProN W4",sans-serif;
     color: #454545;
 }
 
