--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-family: "Noto Sans Japanese",sans-serif;
+    font-family: 'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
     color: #454545;
 }
 
