--- a/main.css
+++ b/main.css
@@ -58,3 +58,35 @@ strong {
     margin-block-start: 0.7em;
     margin-block-end: 0.7em;
 }
+
+code {
+    display: inline-block;
+    padding: 0.1em 0.25em;
+    color: #444;
+    background-color: #e7edf3;
+    border-radius: 3px;
+    border: solid 1px #d6dde4;
+}
+
+pre {
+    margin: 1em 0; /* ブロック前後の余白 */
+    padding: 1em; /* ブロック内の余白 */
+    border-radius: 5px; /* 角丸 */
+    background: #25292f; /* 背景色 */
+    color: #fff; /* 文字色 */
+    overflow-x: auto; /* 横スクロールバー */
+    -webkit-overflow-scrolling: touch;  /* スクロールバーの滑らかさ */
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+li {
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+}
+
+
