--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ strong {
     margin-block-end: 0.7em;
 }
 
-code {
+p code {
     display: inline-block;
     padding: 0.1em 0.25em;
     color: #444;
@@ -79,14 +79,15 @@ pre {
 }
 
 ul {
-    padding: 0;
-    list-style: none;
+    background: #fffcf4;
+    border-radius :8px;/*角の丸み*/
+    box-shadow :0px 0px 5px silver;/*5px=影の広がり具合*/
+    padding: 0.5em 0.5em 0.5em 2em;
 }
 
-li {
-    float: left;
-    display: inline;
-    padding: 0 20px 0 20px;
+ul li {
+    line-height: 1.5;
+    padding: 0.5em 0;
 }
 
 
