--- a/main.css
+++ b/main.css
@@ -78,16 +78,17 @@ pre {
     -webkit-overflow-scrolling: touch;  /* スクロールバーの滑らかさ */
 }
 
-ul {
+.data-list {
     background: #fffcf4;
     border-radius :8px;/*角の丸み*/
     box-shadow :0px 0px 5px silver;/*5px=影の広がり具合*/
     padding: 0.5em 0.5em 0.5em 2em;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    margin-block-start: 0.7em;
+    margin-block-end: 0.7em;
 }
 
-ul li {
-    line-height: 1.5;
-    padding: 0.5em 0;
-}
 
 
