--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ pre {
     background: #fffcf4;
     border-radius :8px;/*角の丸み*/
     box-shadow :0px 0px 5px silver;/*5px=影の広がり具合*/
-    padding: 0.5em 0.5em 0.5em 2em;
+    padding: 0;
     list-style: none;
     display: flex;
     justify-content: space-evenly;
