--- a/main.css
+++ b/main.css
@@ -25,6 +25,33 @@ h3 {
     border-left: solid 5px #7db4e6;/*左線*/
 }
 
+
+h4 {
+    position: relative;
+    padding-left: 25px;
+}
+
+h4:before {
+    position: absolute;
+    content: '';
+    bottom: -3px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border: none;
+    border-left: solid 15px transparent;
+    border-bottom: solid 15px rgb(119, 195, 223);
+}
+h4:after {
+    position: absolute;
+    content: '';
+    bottom: -3px;
+    left: 10px;
+    width: 100%;
+    border-bottom: solid 3px rgb(119, 195, 223);
+}
+
+
 body {
     color: #232323;
     line-height: 2.0;
